Fixed vertical text spacing with blue cards

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ a {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    gap: 8px;
 }
 
 .card-img {
@@ -161,7 +162,6 @@ a {
     padding: 40px;
     height: 60px;
     width: 60px;
-
 
 }
 
